--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,7 @@
       name="description"
       content="A lightweight homepage with Google search, grouped bookmarks, and a calm blue layout."
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,500;1,600&family=Noto+Sans+SC:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./styles.css?v=20260228-3" />
+    <link rel="stylesheet" href="./styles.css?v=20260228-5" />
   </head>
   <body>
     <div class="page-shell" id="app-shell">
@@ -39,14 +33,26 @@
 
         <section class="bookmarks-section" aria-labelledby="bookmarks-title">
           <div class="section-heading">
-            <h2 id="bookmarks-title">书签</h2>
+            <div class="section-title-block">
+              <h2 id="bookmarks-title">书签</h2>
+              <p id="bookmark-source-status" class="bookmark-source-status" aria-live="polite"></p>
+            </div>
             <div class="section-tools" aria-label="书签操作">
               <input id="import-file-input" type="file" accept="application/json,.json" hidden />
               <button type="button" class="toolbar-button" id="import-button" aria-label="导入书签" title="导入书签"></button>
               <button type="button" class="toolbar-button" id="export-button" aria-label="导出书签" title="导出书签"></button>
               <button type="button" class="toolbar-button" id="reset-button" aria-label="恢复默认" title="恢复默认"></button>
+              <button type="button" class="toolbar-button" id="settings-button" aria-label="页面设置" title="页面设置"></button>
               <button type="button" class="toolbar-button is-primary" id="add-group-button" aria-label="新建分组" title="新建分组"></button>
             </div>
+          </div>
+
+          <div class="section-subbar">
+            <p id="bookmark-status" class="bookmark-status" aria-live="polite"></p>
+            <label class="filter-field" for="bookmark-filter">
+              <span class="sr-only">筛选书签</span>
+              <input id="bookmark-filter" type="search" placeholder="筛选书签" autocomplete="off" />
+            </label>
           </div>
 
           <div
@@ -70,9 +76,7 @@
       >
         <div class="editor-header">
           <h3 id="editor-title">编辑</h3>
-          <button type="button" class="icon-button" id="close-editor-button" aria-label="关闭">
-            ×
-          </button>
+          <button type="button" class="icon-button" id="close-editor-button" aria-label="关闭"></button>
         </div>
         <form id="editor-form" class="editor-form" novalidate>
           <div id="editor-fields" class="editor-fields"></div>
@@ -80,6 +84,57 @@
           <div class="editor-actions">
             <button type="button" class="ghost-button" id="cancel-editor-button">取消</button>
             <button type="submit" class="primary-button" id="save-editor-button">保存</button>
+          </div>
+        </form>
+      </section>
+    </div>
+
+    <div class="dialog-backdrop hidden" id="settings-backdrop" aria-hidden="true">
+      <section
+        class="editor-dialog settings-dialog"
+        id="settings-dialog"
+        role="dialog"
+        aria-modal="true"
+        aria-labelledby="settings-title"
+      >
+        <div class="editor-header">
+          <h3 id="settings-title">页面设置</h3>
+          <button type="button" class="icon-button" id="close-settings-button" aria-label="关闭"></button>
+        </div>
+        <form id="settings-form" class="editor-form" novalidate>
+          <div class="settings-grid">
+            <label class="toggle-field">
+              <input id="setting-show-favicons" name="showFavicons" type="checkbox" />
+              <span>
+                <strong>显示 favicon</strong>
+                <small>为书签显示网站图标</small>
+              </span>
+            </label>
+            <label class="toggle-field">
+              <input id="setting-performance-mode" name="performanceMode" type="checkbox" />
+              <span>
+                <strong>性能优先</strong>
+                <small>减少重动画和高开销视觉效果</small>
+              </span>
+            </label>
+            <label class="toggle-field">
+              <input id="setting-show-animations" name="showAnimations" type="checkbox" />
+              <span>
+                <strong>显示动画</strong>
+                <small>启用首屏和卡片过渡动画</small>
+              </span>
+            </label>
+            <label class="toggle-field">
+              <input id="setting-hide-scrollbars" name="hideScrollbars" type="checkbox" />
+              <span>
+                <strong>隐藏滚动条</strong>
+                <small>保留滚动能力但不显示滚动条</small>
+              </span>
+            </label>
+          </div>
+          <div class="editor-actions">
+            <button type="button" class="ghost-button" id="cancel-settings-button">取消</button>
+            <button type="submit" class="primary-button" id="save-settings-button">保存设置</button>
           </div>
         </form>
       </section>
@@ -106,11 +161,9 @@
     </div>
 
     <noscript>
-      <div class="noscript-banner">
-        需要启用 JavaScript 才能加载书签分组。
-      </div>
+      <div class="noscript-banner">需要启用 JavaScript 才能加载书签分组</div>
     </noscript>
 
-    <script src="./app.js?v=20260228-3" defer></script>
+    <script src="./app.js?v=20260228-5" defer></script>
   </body>
 </html>
